Sticky comments reply form

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -341,6 +341,11 @@ p + .revealed {
 	margin-top: 10px;
 }
 
+.next_button,
+#prev_slide_button {
+	height: 40px;	
+}
+
 .right {
 	margin-left: auto;
 }
@@ -900,6 +905,16 @@ li.li-success {
 	vertical-align: middle;
 	margin-left: 15px;
 	color: #B15252;
+}
+
+.comments .reply-form.fixed {
+	position: fixed;
+	max-width: 894px;
+	bottom: 0;
+	background-color: white;
+	padding: 15px;
+	margin-left: -15px;
+	box-shadow: 0 -12px 16px -9px #ccc;
 }
 
 .comments .comment:not(.is-reply):not(:nth-child(2)),
