--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -9,12 +9,12 @@
 		href="@Url.RouteUrl("Course.SlideById", new { courseId = Model.CourseId, slideId = Model.PrevSlide != null ? Model.PrevSlide.Url : "" })">
 		← Назад
 	</a>
-	<a class="btn btn-default no-rounds ctrl-group next_button"
+	<a class="btn btn-success no-rounds ctrl-group next_button"
 		id="next_solutions_button"
 		href="@Url.Action("AcceptedSolutions", "Course", new { courseId = Model.CourseId, slideId = Model.SlideId })">
 		Решения других участников →
 	</a>
-	<a class="btn btn-default no-rounds ctrl-group next_button"
+	<a class="btn btn-success no-rounds ctrl-group next_button"
 		id="next_slide_button"
 		href="@Url.RouteUrl("Course.SlideById", new { courseId = Model.CourseId, slideId = Model.NextSlide != null ? Model.NextSlide.Url : "", autoplay = 1 })">
 		Следующий слайд →
