--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -907,16 +907,6 @@ li.li-success {
 	color: #B15252;
 }
 
-.comments .reply-form.fixed {
-	position: fixed;
-	max-width: 894px;
-	bottom: 0;
-	background-color: white;
-	padding: 15px;
-	margin-left: -15px;
-	box-shadow: 0 -12px 16px -9px #ccc;
-}
-
 .comments .comment:not(.is-reply):not(:nth-child(2)),
 .comments.comments__feed .comment:not(:nth-child(2)) {
 	padding-top: 7px;
@@ -928,8 +918,7 @@ li.li-success {
 	max-width: none;
 	padding-top: 1px;
 	padding-left: 6px;
-	margin: 5px 0;
-	margin-bottom: 10px;
+    margin: 5px 0 10px;
 }
 
 .comments .comment.is-pinned .comment__footer .comment__pin-link,
