--- a/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/TableOfContents.cshtml
@@ -41,6 +41,7 @@
 		}
 	</ul>
 }
+
 @helper TocUnit(TocUnitModel unit, int index)
 {
 	var collapseOption = unit.IsCurrent ? "collapse in" : "collapse";
@@ -61,14 +62,15 @@
 	</li>
 }
 
-
 @helper TocItem(TocPageInfo page)
 {
-	<li class="slide-list-item clickable @( page.IsCurrent ? "selected" : "") full-size" onclick="window.location.href = '@page.Url'" data-slide-id="@page.SlideId">
-		<i class="@GetPageIconClass(page) navbar-label" title="@GetTocPageTytle(page.PageType)"></i>
-		<a href="@page.Url" style="margin-right: 5px">@page.Name</a>
-		<span class="score right">@SlideHtml.Score(page.Score, page.MaxScore)</span>
-	</li>
+	<a href="@page.Url" class="@(page.IsCurrent ? "selected" : "")">
+        <span class="slide-list-item clickable full-size" data-slide-id="@page.SlideId">
+            <i class="@GetPageIconClass(page) navbar-label" title="@GetTocPageTytle(page.PageType)"></i>
+            <span class="underline-on-parent-hover" style="margin-right: 5px">@page.Name</span>
+            <span class="score right">@SlideHtml.Score(page.Score, page.MaxScore)</span>
+        </span>
+    </a>
 }
 
 @helper TocAdditionalScore(ScoringGroup group, int score)
