--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -309,7 +309,7 @@
 	}
 	if (mistakesCount.NotCheckedNecessary > 0)
 	{
-		var necessaryItemsText = mistakesCount.CheckedUnnecessary.PluralizeInRussian(new RussianPluralizationOptions
+		var necessaryItemsText = mistakesCount.NotCheckedNecessary.PluralizeInRussian(new RussianPluralizationOptions
 		{
 			One = "правильный вариант",
 			Two = "правильных варианта",
