Margin for quiz buttons

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -516,8 +516,11 @@ p + .revealed {
 }
 
 .quiz-submit-btn {
-	margin-top: -10px;
 	margin-bottom: 5px;
+}
+
+.quiz-button {
+	margin-top: 20px; 
 }
 
 .quiz-status,
