--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -119,16 +119,16 @@
 		<div id="SubmitQuiz" data-url='@Url.Action("SubmitQuiz", "Quiz")'>
 			@if (Model.QuizState == QuizState.NotPassed)
 			{
-				<button class="btn btn-primary quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Готово!</button>
+				<button class="btn btn-primary quiz-button quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Готово!</button>
 			}
 			else if (Model.QuizState == QuizState.WaitForCheck && Model.ManualQuizCheckQueueItem == null)
 			{
-				<button class="btn btn-primary quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Переотправить ответы</button>
+				<button class="btn btn-primary quiz-button quiz-submit-btn" onclick="submitQuiz('@Model.Course.Id', '@Model.Slide.Id', '@Model.AnswersToQuizes.Count', @Model.IsLtiToString) ">Переотправить ответы</button>
 			}
 			else if (Model.QuizState == QuizState.IsChecking && Model.ManualQuizCheckQueueItem != null)
 			{
-				<input type="submit" class="btn btn-default" form="quiz__score-form" value="Сохранить и вернуться">
-				<input type="submit" class="btn btn-primary" form="quiz__score-form" value="Сохранить и перейти к следующему"
+				<input type="submit" class="btn btn-default quiz-button" form="quiz__score-form" value="Сохранить и вернуться">
+				<input type="submit" class="btn btn-primary quiz-button" form="quiz__score-form" value="Сохранить и перейти к следующему"
 						data-url="@Url.Action("CheckNextQuizForSlide", "Admin", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, group = Model.GroupsIdsJoined })"
 						onclick="$('[name=nextUrl]').val($(this).data('url'))">
 			}
@@ -139,7 +139,7 @@
 					<input type="hidden" name="slideId" value="@Model.Slide.Id"/>
 					<input type="hidden" name="courseId" value="@Model.Course.Id"/>
 					<input type="hidden" name="isLti" value="@Model.IsLtiToString">
-					<button class="btn btn-primary" type="submit">Пройти тест ещё раз</button>
+					<button class="btn btn-primary quiz-button quiz-retry-btn" type="submit">Пройти тест ещё раз</button>
 					<small class="quiz__remains">
 						@if (Model.MaxTriesCount == QuizController.InfinityTriesCount)
 						{
